# Pseudocode-Compiler

./: .gitignore  Building-A-Compiler.code-workspace  CMakeLists.txt  README.md  compiler.cpp  compiler.h  constants.h  grammar.txt  lexer.cpp  lexer.h  main.cpp  makefile  parser.cpp  parser.h  parser_nodes.h  test_cases.sh  token.h
data/: arrays.pcode  bubble_sort.pcode  error_program.pcode  fibonacci.pcode  for.pcode  full_lexer_test.pcode  functions.pcode  hello.pcode  if_statements.pcode  lexer_test.pcode.ignore  loops.pcode  operations.pcode  variables.pcode  while.pcode
include/: token.h
sample-code/: full_lexer_test.pcode  functions.ll  functions.pcode  hello.ll  hello.pcode  if_statements.ll  if_statements.pcode  lexer_test.ll  lexer_test.pcode  loops.ll  name.ll  operations.ll  variables.ll  variables.pcode
samples/: functions.ll  hello.ll  name.ll  operations.ll
src/: ast_nodes.cpp  ast_nodes.h  ast_nodes.hpp  code_generator.cpp  code_generator.h  code_generator.hpp  compiler.cpp  compiler.h  compiler.hpp  constants.h  constants.hpp  exceptions.cpp  exceptions.h  exceptions.hpp  lexer.cpp  lexer.h  lexer.hpp  main.cpp  makefile  parser.cpp  parser.h  parser.hpp  semantics.cpp  semantics.h  semantics.hpp  token.cpp  token.h  token.hpp
src/sample-code/: hello.pcode  loops.pcode  name.pcode  operations.pcode
test-code/: functions.txt  hello.txt  name.txt
